recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: not found: value stept
	tree(stept-1,length*shrink,angle,shrink);
             ^Tree:8: error: not found: value stept
	tree(stept-1,length*shrink,angle,shrink);
             ^